objects/alm_pm2__Instances__c.object
<CustomObject>
 <fullName>alm_pm2__Instances__c</fullName>
 <fields>
  <fullName>alm_pm2__Custom_Domain__c</fullName>
  <description>Used for instances with "My" domains such as "companyname.my.salesforce.com"</description>
  <inlineHelpText>Used for instances with "My" domains such as "companyname.my.salesforce.com"</inlineHelpText>
  <label>Custom Domain</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Instance_Name__c</fullName>
  <label>Instance Name</label>
  <length>80</length>
  <type>Text</type>
  <unique>true</unique>
 </fields>
 <fields>
  <fullName>alm_pm2__Is_ALM_Instance__c</fullName>
  <defaultValue>false</defaultValue>
  <inlineHelpText>Indicates that this is the instance in which the ALM package is installed</inlineHelpText>
  <label>Is ALM Instance</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Is_Deleted__c</fullName>
  <defaultValue>false</defaultValue>
  <label>Deleted</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Rename_Lock_Expiration_Time__c</fullName>
  <inlineHelpText>The timestamp of the expiration of the renaming lock.</inlineHelpText>
  <label>Rename Lock Expiration Time</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Type__c</fullName>
  <label>Type</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>Production / Developer</fullName>
    </value>
    <value>
     <fullName>Sandbox</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <label>Instance</label>
 <nameField>
  <label>Instance Name</label>
  <type>Text</type>
 </nameField>
 <pluralLabel>Instances</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>